src/objects/Position__c.object
<CustomObject>
    <description>Position to be filled</description>
    <fields>
        <fullName>Department__c</fullName>
        <description>The department the position is in.</description>
        <inlineHelpText>The department the position is in.</inlineHelpText>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Educational_Requirements__c</fullName>
        <description>Minimum educational level required for the position.</description>
        <inlineHelpText>Minimum educational level required for the position.</inlineHelpText>
        <label>Educational Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>High school</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PhD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-doc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <description>Description of position to be filled.</description>
        <inlineHelpText>Description of position to be filled.</inlineHelpText>
        <label>Job Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>Identification of the position from legacy system.</description>
        <externalId>true</externalId>
        <inlineHelpText>Identification of the position from legacy system.</inlineHelpText>
        <label>Legacy ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>The location of the position.</inlineHelpText>
        <label>Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Programming_Languages__c</fullName>
        <description>Programming languages required for this position.</description>
        <inlineHelpText>Programming languages required for this position.</inlineHelpText>
        <label>Programming Languages</label>
        <picklist>
            <picklistValues>
                <fullName>COBOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORTRAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Python</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <description>Responsibilities of position.</description>
        <inlineHelpText>Responsibilities of position.</inlineHelpText>
        <label>Responsibilities</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salary_Grade__c</fullName>
        <description>Salary grade for position.</description>
        <inlineHelpText>Salary grade for position.</inlineHelpText>
        <label>Salary Grade</label>
        <picklist>
            <controllingField>Department__c</controllingField>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENG-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENG-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENG-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENG-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIN-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIN-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIN-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIN-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAL-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAL-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAL-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAL-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUP-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUP-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUP-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUP-400</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date which the position starts.</description>
        <inlineHelpText>Date which the position starts.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status for the position.</description>
        <inlineHelpText>Status for the position.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_status__c</fullName>
        <description>Specific reasons for a position having a status of Closed.</description>
        <inlineHelpText>Programming languages required for this position.</inlineHelpText>
        <label>Sub-status</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Job_Description__c</columns>
        <columns>Department__c</columns>
        <columns>Location__c</columns>
        <columns>Status__c</columns>
        <columns>Educational_Requirements__c</columns>
        <columns>Programming_Languages__c</columns>
        <columns>Responsibilities__c</columns>
        <columns>Salary_Grade__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Sub_status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Required_Education_Specification</fullName>
        <active>true</active>
        <description>Enforces requirement to define an educational specification for the position.</description>
        <errorConditionFormula>ISPICKVAL( Educational_Requirements__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Department__c</errorDisplayField>
        <errorMessage>You must specify an educational requirement for this position.</errorMessage>
    </validationRules>
</CustomObject>